# helloWorld

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test-lib.yml
app/: CMakeLists.txt  app.c
lib/: CMakeLists.txt  hello_world.c  hello_world.h
tests/: CMakeLists.txt  hello-world.tests.c
